--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ pytest = "8.3.4"
 pytest-cov = "6.0.0"
 pytest-mock = "3.14.0"
 setuptools = "80.9.0"
+sphinx = "8.2.3"
+sphinx-rtd-theme = "3.0.2"
+sphinx-autodoc-typehints = "3.2.0"
+myst-parser = "4.0.1"
 
 [tool.black]
 line-length = 79
