docs: add versions to readthedocs yaml

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,3 +11,9 @@ sphinx:
 python:
   install:
     - requirements: docs/requirements.txt
+
+versions:
+  only:
+    - "main"
+    - "v*"
+    - "latest"
