fix: install transparentmeta in readthedocs yaml so docs should be built in read the docs

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,10 +4,11 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.12"
+  jobs:
+    pre_install:
+      - pip install poetry
+    install:
+      - make install_dev
 
 sphinx:
   configuration: docs/conf.py
-
-python:
-  install:
-    - requirements: docs/requirements.txt
