--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Run quality checks
         run: make checklist
 
-      - name: Configure TestPyPI
-        run: poetry config repositories.test-pypi https://test.pypi.org/legacy/
+      - name: Configure PyPI
+        run: poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
 
-      - name: Publish to TestPyPI
-        run: poetry publish --build -r test-pypi --username __token__ --password ${{ secrets.TEST_PYPI_API_TOKEN }}
+      - name: Publish to PyPI
+        run: poetry publish --build
 
